# PyFastAdmin

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  tailwind.config.js
app/: config.py  db.py  main.py  models_legacy.py
app/common/: __init__.py
app/middleware/: auth.py
app/models/: __init__.py  admin_user.py  async_tasks.py  operation_log.py  queue_consumers.py  rbac.py  rbac_permission.py  role.py
app/services/: admin_user_service.py  async_tasks_service.py  auth_service.py  cloud_storage.py  config_service.py  log_service.py  periodic_service.py  permission_service.py  process_supervisor.py  queue_consumers_service.py  queue_service.py  rbac_service.py  redis_service.py  role_service.py  task_monitor_service.py  task_registry.py
app/tasks/: __init__.py  periodic_builtin.py  queue_builtin.py
app/workers/: __init__.py  periodic_worker.py  queue_worker.py
deploy/dev/: docker-compose.yml
deploy/e2e/: docker-compose.yml
deploy/product/: Dockerfile  docker-compose.yml
docs/: FASTHX_MIGRATION_TODO.md  SECONDARY_DEVELOPMENT_GUIDE.md
refs/: .gitkeep
scripts/: generate_admin_module.py
tests/: conftest.py
tests/e2e/: conftest.py  test_admin_login_flow.py  test_admin_users_fasthx_flow.py  test_auth_profile_password_fasthx_flow.py  test_backup_fasthx_flow.py  test_config_fasthx_flow.py  test_logs_fasthx_flow.py  test_permission_guardrails.py  test_rbac_fasthx_flow.py
tests/integration/: test_async_task_pages.py  test_auto_nav_injection.py  (+3 more)
(+62 files in other folders)
