[project]
name = "pyfastadmin"
version = "0.1.0"
description = "HTMX + Alpine + Tailwind + FastAPI + Jinja2 + Beanie 管理后台"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "beanie>=1.27",
  "motor>=3.4",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
]

[project.urls]
Homepage = ""
